@@ -4,6 +4,8 @@ tag-0.2-20210709 JP
   - Markup warnings now logged at debug level
   - Fuzzy matches only printed at debug level
   - Only match to Affiliation=xsede.org organizations
+  - Improve ShortDescriptions
+  - Print no Provider matches as a summary at the end
 
 tag-0.2-20210708 JP
   - Replace 'xsede.org' with 'info.xsede.org' in Warehouse_XDCDB_Training_Class_Session GlobalURN
